Box to input password

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Page</title>
+    <title>Password Strength Checker</title>
 </head>
 <body>
-    <h1>Welcome to My Web Page!</h1>
-    <p>This is a simple web page created with Flask.</p>
+    <h1>Password Strength Checker</h1>
+    <label for="password">Password:</label>
+    <input type="password" id="password" >
 </body>
 </html>
