color title ,size box

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,19 @@
             padding: 20px;
             color: #182400;
         }
-    
+        h1 {
+            color: #007bff;
+        }
+        label, p {
+            font-size: 16px;
+        }
+        input[type="password"] {
+            margin-top: 5px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            width: 300px;
+        }
     </style>
 </head>
 <body>
