register but not work

--- a/templates/login.html
+++ b/templates/login.html
@@ -19,5 +19,6 @@
         <br>
         <button type="submit">Login</button>
     </form>
+    <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
 </body>
 </html>
