--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,18 @@
             margin: 0;
             padding: 20px;
             color: #182400;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
         }
         h1 {
             color: #dd50a9;
         }
         label, p {
-            font-size: 16px;
+            font-size: 32px;
+            text-align: center;
         }
         input[type="password"] {
             margin-top: 5px;
@@ -25,9 +31,11 @@
             border: 1px solid #ddd;
             border-radius: 5px;
             width: 300px;
+            text-align: center;
         }
         #passwordStrength {
-            margin-top: 10px;
+            display: block;
+            text-align: center;
         }
         #strengthText {
             font-weight: bold;
