--- a/templates/index.html
+++ b/templates/index.html
@@ -29,10 +29,12 @@
         input[type="password"] {
             margin-top: 5px;
             padding: 10px;
-            border: 1px solid #ddd;
             border-radius: 5px;
             width: 300px;
             text-align: center;
+            background-color: #333;
+            color: #00ff00; 
+            border: 2px solid #555; 
         }
         #passwordStrength {
             display: block;
@@ -55,7 +57,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            background-color: #333;
+            background-color: #222;
             color: white;
             padding: 10px 0;
             display: flex;
