change font and background

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #bef4ec;
+            font-family: 'Courier New', Courier, monospace; 
+            background-color: #0a0a0a; 
             margin: 0;
             padding: 20px;
-            color: #182400;
+            color: #00ff00;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -19,7 +19,7 @@
             flex-direction: column;
         }
         h1 {
-            color: #dd50a9;
+            color: #ffffff;
             font-size: 64px;
         }
         label, p {
