--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,40 @@
             align-items: center;
             height: 100vh;
             flex-direction: column;
+        }
+        h1 {
+            color: #ffffff;
+            font-size: 64px;
+        }
+        label, p {
             font-size: 32px;
+            text-align: center;
+        }
+        button {
+            margin-top: 10px;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background-color: #0d3e00;
+            color: #fff;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0a560fd1;
+        }
+        p {
+            margin-top: 10px;
+        }
+        a {
+            color: #bb00be;
+            text-decoration: none;
+            animation: blink 1s step-end infinite;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        @keyframes blink {
+            50% { color: #e7e7e7; }
         }
     </style>
 </head>
