--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,6 @@
             padding-top: 30px;
             color: #00ff00;
             display: flex;
-            justify-content: center;
             align-items: center;
             height: 100vh;
             flex-direction: column;
@@ -26,13 +25,23 @@
             font-size: 32px;
             text-align: center;
         }
+        input[type="text"], input[type="password"] {
+            margin-top: 5px;
+            padding: 10px;
+            border-radius: 5px;
+            width: 300px;
+            text-align: center;
+            background-color: #52344d;
+            color: #00ff00; 
+            border: 2px solid #00fd37;
+        }
         button {
             margin-top: 10px;
             padding: 10px;
             border: none;
             border-radius: 5px;
             background-color: #0d3e00;
-            color: #fff;
+            color: #ffffff;
             cursor: pointer;
         }
         button:hover {
