logout to dashboard

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
 </head>
 <body>
     <div class="tab-bar">
-        <a href="login">Log out</a>
+        <a href="/">Log out</a>
     </div>
     <div style="margin-top: -250px;"> 
         <h1>Password Strength Checker</h1>
